# TTBMMT

./: .gitignore  1_threads.txt  2_threads.txt  3_threads.txt  4_threads.txt  CMakeLists.txt  Notizen  README.md  TTBMMT.code-workspace  ascii.py  bash.sh  bash_einsum_benchmark.sh  bash_flops.sh  batch.cpp  c_bmm.cpp  c_bmm_blocked.cpp  c_bmm_t.cpp  c_bmm_t_blocked copy.cpp  c_bmm_t_blocked.cpp  custom.csv  data_flops.csv  data_flops_unopt.csv  dictionary.txt  e_b.py  e_b.txt  e_b_double.py  e_b_double.txt  experiments.py  experiments_2.py  experiments_benchmark_from_bash.py  experiments_flops.py  experiments_threads.py  f_map_to_bmm.py  f_map_to_bmm_copy.py  f_mapping.py  f_operation.py  f_path_operation.py  f_path_operation_copy.py  f_single_engine.py  f_single_trace.py  (+25 more)
data/: 1_threads.txt  3_threads.txt  Datatype_Double.txt  Original_Datatypes.txt  custom_einsum_benchmark.csv  data_flops.csv  data_flops32.csv  data_flops_2.csv  data_flops_batch.csv  data_flops_traces.csv  data_flops_unopt.csv  data_opt.csv  data_sparse.csv  datatype_double.txt  e_b_double.txt  einsum_all.txt  flop_dict.txt  interesting_einsum_dictionary.txt  original_datatypes.txt  plot_sorted_benchmark.py  plots_csv.py  plots_dict.py  threads.txt
docs/: literature.bib  main.aux  main.bbl  main.bcf  main.blg  main.tex  paper.aux  paper.bcf  paper.run.xml  paper.tex
experiments/: bash_experiments.sh  e_b.py  e_b_double.py  experiments.py  experiments_flops.py  experiments_threads.py
stuff/: f_single_trace.py
ttbt/: c_bmm_t.cpp  c_bmm_t_blocked.cpp  (+3 more)
ttbt.egg-info/: PKG-INFO  SOURCES.txt
(+12 files in other folders)
