[metadata]
name = ttbt
version = 1.0
author = Fenja Wagner
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Cython
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include = ttbt